--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.jinqiu:scaleviewpager:1.0.1'
+    implementation "com.byteowls:jopencage:1.4.0"
+
     implementation 'com.tbuonomo:morph-bottom-navigation:1.0.1'
     implementation 'io.paperdb:paperdb:2.6'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
